welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:3: error: type mismatch;
 found   : Int(20)
 required: Boolean
  	if (7<= hour <= 20 ){ return false}
                        ^